fix: wrap function Input into Area

--- a/src/client/components/Function/ui/Input/Input.module.scss
+++ b/src/client/components/Function/ui/Input/Input.module.scss
@@ -1,3 +1,8 @@
+.wrapper {
+  box-sizing: border-box;
+  width: auto;
+  position: relative;
+}
 .input,
 .buffer {
   width: auto;
@@ -18,5 +23,7 @@
 .buffer {
   white-space: pre;
   position: absolute;
+  top: 0;
+  left: 0;
   visibility: hidden;
 }
